@@ -1,13 +1,10 @@
 package File::DataClass::IO;
 
 use 5.010001;
-use namespace::clean -except => 'meta';
-use overload '""' => sub { shift->pathname }, fallback => 1;
 
 use Moo;
 use Cwd                        qw( );
 use English                    qw( -no_match_vars );
-use Exporter 5.57              qw( import );
 use Fcntl                      qw( :flock :seek );
 use File::Basename               ( );
 use File::Copy                   ( );
@@ -26,6 +23,11 @@ use Type::Utils                qw( enum );
 use Unexpected::Functions      qw( PathNotFound Unspecified );
 use Unexpected::Types          qw( ArrayRef Bool CodeRef Int Maybe Object
                                    PositiveInt RegexpRef SimpleStr Str );
+
+use namespace::clean -except => 'meta';
+use overload '""' => sub { shift->pathname }, fallback => 1;
+
+use Exporter 5.57              qw( import );
 
 our @EXPORT    = qw( io );
 
